# pfad

./: .ghci  .gitignore  Makefile  pfad.cabal  shell.nix  stack.shell.nix  stack.yaml
src/: Allcp.hs  BoyerMoore.hs  Bwt.hs  CClicque.hs  Countdown.hs  CxHull.hs  Dedup.hs  Det.hs  Hylo.hs  Kmp.hs  Looples.hs  MaxNonSegSum.hs  MaxTail.hs  MinHeightTree.hs  Minfree.hs  MkCentury.hs  Msc.hs  Raarco.hs  RankTails.hs  Rhp.hs  Saddleback.hs  SchWa.hs  Selection.hs  Sudoku.hs  Upravel.hs
test/: AllcpSpec.hs  BoyerMooreSpec.hs  BwtSpec.hs  CxHullSpec.hs  DedupSpec.hs  DetSpec.hs  KmpSpec.hs  MaxNonSegSumSpec.hs  MaxTailSpec.hs  MinFreeSpec.hs-temp  MinHeightTreeSpec.hs  MkCenturySpec.hs  MscSpec.hs  RankTailsSpec.hs  SaddlebackSpec.hs  UpravelSpec.hs
