name:                pfad
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pfad#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Minfree
                     , Dedup
                     , Msc
                     , Saddleback
                     , MkCentury
                     , MinHeightTree
                     , Upravel
                     , CClicque
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

executable pfad-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pfad
  default-language:    Haskell2010

test-suite minfree
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MinfreeSpec.hs
  build-depends:       base
                     , containers >= 0.5
                     , pfad
                     , hspec
                     , QuickCheck >= 2.8
                     , vector >= 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite msc
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MscSpec.hs
  build-depends:       base
                     , pfad
                     , hspec
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite saddleback
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             SaddlebackSpec.hs
  build-depends:       base
                     , pfad
                     , hspec
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite mkcentury
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MkCenturySpec.hs
  build-depends:       base
                     , pfad
                     , hspec
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite minheighttree
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MinHeightTreeSpec.hs
  build-depends:       base
                     , pfad
                     , hspec
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite upravel
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             UpravelSpec.hs
  build-depends:       base
                     , pfad
                     , hspec
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite dedup
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DedupSpec.hs
  build-depends:       base
                     , pfad
                     , hspec
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pfad
